--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -45,10 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="View\AddCohortScheduleForm.cs">
+    <Compile Include="View\AddCohortForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\AddCohortScheduleForm.Designer.cs">
       <DependentUpon>AddCohortScheduleForm.cs</DependentUpon>
+    <Compile Include="View\AddCohortForm.Designer.cs">
+      <DependentUpon>AddCohortForm.cs</DependentUpon>
     </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
@@ -75,6 +78,8 @@
     </Compile>
     <EmbeddedResource Include="View\AddCohortScheduleForm.resx">
       <DependentUpon>AddCohortScheduleForm.cs</DependentUpon>
+    <EmbeddedResource Include="View\AddCohortForm.resx">
+      <DependentUpon>AddCohortForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
