Organized controller into regions, added Employee and Stage controllers Renamed controls in AddCohortForm to resolve conflicts Removed TestDAL because it is not needed at this time, moved test getEmployeeNamesList() to TestController

--- a/EvaluationController/EvaluationController.csproj
+++ b/EvaluationController/EvaluationController.csproj
@@ -39,10 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmployeeController.cs" />
     <Compile Include="EvaluationController.cs" />
     <Compile Include="IEvaluationController.cs" />
     <Compile Include="LogonController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StageController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EvaluationDAL\EvaluationDAL.csproj">
