--- a/EvaluationController/EvaluationController.csproj
+++ b/EvaluationController/EvaluationController.csproj
@@ -40,11 +40,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmployeeController.cs" />
+    <Compile Include="CohortController.cs" />
     <Compile Include="EvaluationController.cs" />
     <Compile Include="IEvaluationController.cs" />
     <Compile Include="LogonController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StageController.cs" />
+    <Compile Include="TypeController.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EvaluationDAL\EvaluationDAL.csproj">
