--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -70,6 +70,12 @@
     <Compile Include="View\UserReportForm.Designer.cs">
       <DependentUpon>UserReportForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\ViewCohortDetailsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\ViewCohortDetailsForm.Designer.cs">
+      <DependentUpon>ViewCohortDetailsForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -87,6 +93,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\UserReportForm.resx">
       <DependentUpon>UserReportForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\ViewCohortDetailsForm.resx">
+      <DependentUpon>ViewCohortDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
