--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -70,6 +70,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\SelectCohortForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SelectCohortForm.Designer.cs">
+      <DependentUpon>SelectCohortForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\UserReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SelectCohortForm.resx">
+      <DependentUpon>SelectCohortForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\UserReportForm.resx">
       <DependentUpon>UserReportForm.cs</DependentUpon>
