--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="TestController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EvaluationController\EvaluationController.csproj">
