--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -50,8 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="SampleUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StageControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EvaluationController\EvaluationController.csproj">
