--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -115,6 +115,7 @@
     <EmbeddedResource Include="View\ViewCohortDetailsForm.resx">
       <DependentUpon>ViewCohortDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\Evaluation.Model.EvaluationSchedule.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
