--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StageControllerTest.cs" />
+    <Compile Include="TypeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EvaluationController\EvaluationController.csproj">
