Added click event handler for Delete Schedule button. Schedule is deleted when no evaluations exist for the schedule.

--- a/EvaluationController/EvaluationController.csproj
+++ b/EvaluationController/EvaluationController.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScheduleController.cs" />
     <Compile Include="EmployeeController.cs" />
     <Compile Include="CohortController.cs" />
     <Compile Include="EvaluationController.cs" />
