New controller logic unit tested
Still need to test DAL logic, but will do that once final DAL piece is complete

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StageControllerTest.cs" />
     <Compile Include="TypeControllerTest.cs" />
+    <Compile Include="CohortControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EvaluationController\EvaluationController.csproj">
