Added StageDAL.cs and finish getStageList()
Also added IRefreshable and allow a refreshable parent to be passed to AddOrEditCohortScheduleForm

--- a/EvaluationDAL/EvaluationDAL.csproj
+++ b/EvaluationDAL/EvaluationDAL.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IEvaluationDAL.cs" />
     <Compile Include="LogonDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StageDAL.cs" />
     <Compile Include="TypeDAL.cs" />
   </ItemGroup>
   <ItemGroup>
