Set Enter key action to submit form in AddCohortForm.  Also change constructor to use MessageBox instead of Exception on null controller error.

--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -103,6 +103,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\AddCohortForm.resx">
+      <DependentUpon>AddCohortForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\AddOrEditCohortScheduleForm.resx">
       <DependentUpon>AddOrEditCohortScheduleForm.cs</DependentUpon>
     </EmbeddedResource>
