Employee can view list of self evaluations and evaluations to rate others.

--- a/EvaluationController/EvaluationController.csproj
+++ b/EvaluationController/EvaluationController.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IEvaluationController.cs" />
     <Compile Include="LogonController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleController.cs" />
     <Compile Include="StageController.cs" />
     <Compile Include="TypeController.cs" />
   </ItemGroup>
