--- a/EvaluationModel/EvaluationModel.csproj
+++ b/EvaluationModel/EvaluationModel.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeName.cs" />
     <Compile Include="EvalType.cs" />
+    <Compile Include="Evaluations.cs" />
     <Compile Include="EvaluationSchedule.cs" />
     <Compile Include="IRefreshable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
