--- a/EvaluationModel/EvaluationModel.csproj
+++ b/EvaluationModel/EvaluationModel.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Evaluations.cs" />
     <Compile Include="EvaluationSchedule.cs" />
     <Compile Include="IRefreshable.cs" />
+    <Compile Include="OpenEvaluation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stage.cs" />
     <Compile Include="UserReport.cs" />
