--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -76,6 +76,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\RenameCohortForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\RenameCohortForm.Designer.cs">
+      <DependentUpon>RenameCohortForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\SelectCohortForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\RenameCohortForm.resx">
+      <DependentUpon>RenameCohortForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\SelectCohortForm.resx">
       <DependentUpon>SelectCohortForm.cs</DependentUpon>
