--- a/EvaluationDAL/EvaluationDAL.csproj
+++ b/EvaluationDAL/EvaluationDAL.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmployeeDAL.cs" />
+    <Compile Include="RoleDAL.cs" />
     <Compile Include="ScheduleDAL.cs" />
     <Compile Include="CohortDAL.cs" />
     <Compile Include="EvaluationDAL.cs" />
