--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -88,6 +88,12 @@
     <Compile Include="View\SelectCohortForm.Designer.cs">
       <DependentUpon>SelectCohortForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\SelectSupervisorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SelectSupervisorForm.Designer.cs">
+      <DependentUpon>SelectSupervisorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\UserReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\SelectCohortForm.resx">
       <DependentUpon>SelectCohortForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SelectSupervisorForm.resx">
+      <DependentUpon>SelectSupervisorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\UserReportForm.resx">
       <DependentUpon>UserReportForm.cs</DependentUpon>
