Added user report and ReportViewer

--- a/EvaluationModel/EvaluationModel.csproj
+++ b/EvaluationModel/EvaluationModel.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Stage.cs" />
     <Compile Include="UserReport.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\Evaluation.Model.UserReport.datasource" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UserReport.rdlc" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
