--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -32,8 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -154,6 +157,7 @@
     <EmbeddedResource Include="View\SelectSupervisorForm.resx">
       <DependentUpon>SelectSupervisorForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\UserReport.rdlc" />
     <EmbeddedResource Include="View\UserReportForm.resx">
       <DependentUpon>UserReportForm.cs</DependentUpon>
     </EmbeddedResource>
