Got most of User Report working Can't figure out title fields

--- a/EvaluationDAL/EvaluationDAL.csproj
+++ b/EvaluationDAL/EvaluationDAL.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminReportDAL.cs" />
     <Compile Include="EmployeeDAL.cs" />
     <Compile Include="RoleDAL.cs" />
     <Compile Include="ScheduleDAL.cs" />
