--- a/EvaluationController/EvaluationController.csproj
+++ b/EvaluationController/EvaluationController.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminReportController.cs" />
     <Compile Include="ScheduleController.cs" />
     <Compile Include="EmployeeController.cs" />
     <Compile Include="CohortController.cs" />
