--- a/EvaluationModel/EvaluationModel.csproj
+++ b/EvaluationModel/EvaluationModel.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeName.cs" />
     <Compile Include="EvalType.cs" />
+    <Compile Include="EvaluationDetails.cs" />
     <Compile Include="EvaluationSchedule.cs" />
     <Compile Include="IRefreshable.cs" />
     <Compile Include="OpenEvaluation.cs" />
