Create the cohort report form and data report

--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -109,6 +109,12 @@
     <Compile Include="View\SelectSupervisorForm.Designer.cs">
       <DependentUpon>SelectSupervisorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\CohortReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\CohortReportForm.Designer.cs">
+      <DependentUpon>CohortReportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\UserReportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +151,7 @@
     <EmbeddedResource Include="View\AddMembersToCohortForm.resx">
       <DependentUpon>AddMembersToCohortForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\CohortReport.rdlc" />
     <EmbeddedResource Include="View\DeleteCohortForm.resx">
       <DependentUpon>DeleteCohortForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -167,6 +174,9 @@
       <DependentUpon>SelectSupervisorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\UserReport.rdlc" />
+    <EmbeddedResource Include="View\CohortReportForm.resx">
+      <DependentUpon>CohortReportForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\UserReportForm.resx">
       <DependentUpon>UserReportForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,6 +186,7 @@
     <EmbeddedResource Include="View\ViewEvaluationsForm.resx">
       <DependentUpon>ViewEvaluationsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\Evaluation.Model.CohortReport.datasource" />
     <None Include="Properties\DataSources\Evaluation.Model.EvaluationSchedule.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
