Committing before trying to update report viewer

--- a/CS6232-G1/CS6232-G1.csproj
+++ b/CS6232-G1/CS6232-G1.csproj
@@ -206,6 +206,8 @@
     </EmbeddedResource>
     <None Include="Properties\DataSources\Evaluation.Model.CohortReport.datasource" />
     <None Include="Properties\DataSources\Evaluation.Model.EvaluationSchedule.datasource" />
+    <None Include="Properties\DataSources\Evaluation.Model.UserReport.datasource" />
+    <None Include="Properties\DataSources\Evaluation.Model.UserReportTitleData.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
