--- a/EvaluationModel/EvaluationModel.csproj
+++ b/EvaluationModel/EvaluationModel.csproj
@@ -56,9 +56,10 @@
     <Compile Include="Stage.cs" />
     <Compile Include="UserReport.cs" />
     <Compile Include="UserReport2.cs" />
+    <Compile Include="UserReportTitleData.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\DataSources\Evaluation.Model.UserReport.datasource" />
+    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
